RESOLVED FIXED240358
-Wattributes warnings from AtomString.cpp and WTFString.cpp
https://bugs.webkit.org/show_bug.cgi?id=240358
Summary -Wattributes warnings from AtomString.cpp and WTFString.cpp
Michael Catanzaro
Reported 2022-05-12 13:23:10 PDT
https://github.com/WebKit/WebKit/pull/474 introduced some new build warnings: [109/2539] Building CXX object Source/WTF/wtf/CMakeFiles/WTF.dir/text/AtomString.cpp.o /home/mcatanzaro/Projects/WebKit/Source/WTF/wtf/text/AtomString.cpp:35:43: warning: ‘visibility’ attribute ignored [-Wattributes] 35 | WTF_EXPORT_PRIVATE const StaticAtomString nullAtomData { nullptr }; | ^~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/WTF/wtf/text/AtomString.cpp:36:43: warning: ‘visibility’ attribute ignored [-Wattributes] 36 | WTF_EXPORT_PRIVATE const StaticAtomString emptyAtomData { &StringImpl::s_emptyAtomString }; | ^~~~~~~~~~~~~ [144/2539] Building CXX object Source/WTF/wtf/CMakeFiles/WTF.dir/text/WTFString.cpp.o /home/mcatanzaro/Projects/WebKit/Source/WTF/wtf/text/WTFString.cpp:638:39: warning: ‘visibility’ attribute ignored [-Wattributes] 638 | WTF_EXPORT_PRIVATE const StaticString nullStringData { nullptr }; | ^~~~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/WTF/wtf/text/WTFString.cpp:639:39: warning: ‘visibility’ attribute ignored [-Wattributes] 639 | WTF_EXPORT_PRIVATE const StaticString emptyStringData { &StringImpl::s_emptyAtomString }; | ^~~~~~~~~~~~~~~
Attachments
Michael Catanzaro
Comment 1 2022-05-12 13:25:58 PDT
Ah, it's redundant because it's already specified in the header file. We can just remove it. Easy.
Michael Catanzaro
Comment 2 2022-05-12 13:27:29 PDT
EWS
Comment 3 2022-05-12 19:13:36 PDT
Committed r294139 (250509@main): <https://commits.webkit.org/250509@main> Reviewed commits have been landed. Closing PR #604 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2022-05-12 19:14:12 PDT
Note You need to log in before you can comment on or make changes to this bug.