-Wattributes warnings from AtomString.cpp and WTFString.cpp https://bugs.webkit.org/show_bug.cgi?id=240358

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2022-05-12
Reviewed by Yusuke Suzuki.

* Source/WTF/wtf/text/AtomString.cpp:
* Source/WTF/wtf/text/WTFString.cpp:

Canonical link: https://commits.webkit.org/250509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294139 268f45cc-cd09-0410-ab3c-d52691b4dbfc